--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+black==24.2.0
 click==8.1.7
 colorama==0.4.6
 dill==0.3.5.1
@@ -7,12 +8,17 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
 MarkupSafe==2.1.5
+mypy-extensions==1.0.0
 numpy==1.26.4
 packaging==23.2
+pathspec==0.12.1
+platformdirs==4.2.0
 scikit-learn==1.0.2
 scikit-multilearn==0.2.0
 scipy==1.11.4
 six==1.16.0
 threadpoolctl==3.3.0
+tomli==2.0.1
+typing_extensions==4.9.0
 Werkzeug==2.2.2
 xgboost==0.90
